# food-market

./: PRD.md  README.md  docker-compose.yml  package.json  start-dev.sh
backend/: Dockerfile  Dockerfile.simple  env.example  main.py  pyproject.toml  requirements.txt  start.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/v1/: auth.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/models/: market.py  order.py  product.py  statistics.py  user.py
backend/tests/: __init__.py  conftest.py  test_auth.py
docs/: README.md  api-docs.md  architecture.md  backend-guide.md  data-models.md  frontend-guide.md  overview.md  user-flows.md
frontend/: Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: LoginForm.tsx
frontend/src/components/layout/: AccessibilityControls.tsx  Footer.tsx  Header.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/routes/: __root.tsx  index.tsx  login.tsx
frontend/src/services/: api.ts  auth.ts
frontend/src/types/: market.ts  order.ts  product.ts  user.ts
